--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 .rbc-calendar {
-  font-family:
-    -apple-system, 'system-ui', 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+  font-family: Arial, Helvetica, sans-serif !important;
 }
 
 .rbc-btn-group button {
-  font-size: 14px;
+  font-size: 13px !important;
+  font-family: Arial, Helvetica, sans-serif !important;
 }
